@@ -1,19 +1,22 @@
 # -*- coding: utf-8 -*-
 from __future__ import with_statement
+
 import sys
-from cms.apphook_pool import apphook_pool
-from cms.utils.compat.type_checks import string_types
-from cms.utils.i18n import force_language, get_language_list
-from cms.models.pagemodel import Page
 
 from django.conf import settings
 from django.conf.urls import patterns
 from django.contrib.sites.models import Site
 from django.core.exceptions import ImproperlyConfigured
-from django.core.urlresolvers import RegexURLResolver, Resolver404, reverse, \
-    RegexURLPattern
+from django.core.urlresolvers import (RegexURLResolver, Resolver404, reverse,
+    RegexURLPattern)
+from django.utils import six
 from django.utils.importlib import import_module
 from django.utils.translation import get_language
+
+from cms.apphook_pool import apphook_pool
+from cms.models.pagemodel import Page
+from cms.utils.i18n import force_language, get_language_list
+
 
 APP_RESOLVERS = []
 
@@ -142,7 +145,7 @@ def _flatten_patterns(patterns):
 
 def get_app_urls(urls):
     for urlconf in urls:
-        if isinstance(urlconf, string_types):
+        if isinstance(urlconf, six.string_types):
             mod = import_module(urlconf)
             if not hasattr(mod, 'urlpatterns'):
                 raise ImproperlyConfigured(
